# AssetRipper.Translation.LlvmIR

./: .gitignore  .gitmodules  AssetRipper.Translation.LlvmIR.sln  Directory.Build.props  Directory.Build.targets  nuget.config
.github/workflows/: ci.yml
AssetRipper.Translation.LlvmIR/: AssetRipper.Translation.LlvmIR.csproj  FunctionContext.cs  GlobalVariableContext.cs  LibLLVMSharp.cs  Translator.cs
AssetRipper.Translation.LlvmIR.ConsoleApp/: AssetRipper.Translation.LlvmIR.ConsoleApp.csproj
AssetRipper.Translation.LlvmIR.Shims.Native/: AssetRipper.Translation.LlvmIR.Shims.Native.csproj  CMakeLists.txt  LLVMSharp.cpp  LibLLVMSharp.cs  library.cpp  runtime.json
AssetRipper.Translation.LlvmIR.Tests/: AssetRipper.Translation.LlvmIR.Tests.csproj
AssetRipper.Translation.LlvmIR/Instructions/: BinaryMathInstruction.cs  InstructionLifter.cs  NumericalConversionInstruction.cs
CakeBuild/: CakeBuild.cs  CakeBuild.csproj
LLVMShims/: CMakeLists.txt  library.h
LlvmBinaryTextConverter/: LlvmBinaryTextConverter.csproj
MainFunctionDetector/: MainFunctionDetector.csproj
